--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,6 +46,7 @@ import ProgressBar from '../components/ui/feedback/ProgressBar.astro';
 import AlertComponent from '../components/ui/feedback/AlertComponent.astro';
 import SkeletonLoader from '../components/ui/feedback/SkeletonLoader.astro';
 import EmptyState from '../components/ui/feedback/EmptyState.astro';
+import RatingDisplay from '../components/ui/feedback/RatingDisplay.astro';
 
 // Importar componente de demostración del tema
 import ThemeDemo from '../components/ui/demo/ThemeDemo.astro';
@@ -126,6 +127,7 @@ import ThemeDemo from '../components/ui/demo/ThemeDemo.astro';
 				<AlertComponent />
 				<SkeletonLoader />
 				<EmptyState />
+				<RatingDisplay />
 			</div>
 		</section>
 
