--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import ThemeToggle from '../components/ThemeToggle.astro';
 import BackToTopButton from '../components/util/BackToTopButton.astro';
 import '../styles/global.css';
 import '../styles/theme-utilities.css';
+import '../styles/utilities.css';
 
 export interface Props {
 	title: string;
